<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.PhoneNumberFragment">

   <TextView
       android:id="@+id/getOtp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="80dp"
       android:layout_marginStart="30dp"
       android:textColor="@color/black"
       android:textSize="18sp"
       android:fontFamily="@font/inter_semibold"
       android:text="@string/get_otp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/enterNumberTitle"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/enter_your_phone_number"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@id/getOtp"
        app:layout_constraintTop_toBottomOf="@id/getOtp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/countryCode"
        app:strokeWidth="1dp"
        app:strokeColor="#C4C4C4"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/enterNumberTitle"
        app:layout_constraintLeft_toLeftOf="@id/enterNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+91"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/phoneNumber"
        app:strokeWidth="1dp"
        app:strokeColor="#C4C4C4"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/enterNumberTitle"
        app:layout_constraintLeft_toRightOf="@id/countryCode"
        android:layout_marginStart="8dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:maxLength="10"
            android:id="@+id/phoneNumberEt"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9876543212"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:id="@+id/continueBtn"
        app:cornerRadius="20dp"
        android:text="@string/cont"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/inter_semibold"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@id/countryCode"
        app:layout_constraintTop_toBottomOf="@id/countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>