<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DashBoardFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="53dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="27sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/personalMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/personal_messages_to_you"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notesTitle" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileCard"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/personalMessage">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/ic_gradient_backgrounf">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:padding="20dp"
                            android:text="Meena, 23"
                            android:textColor="@color/white"
                            android:textSize="22sp" />
                    </LinearLayout>

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/intestedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_bold"
                android:text="Interested in you"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCard" />

            <TextView
                android:textSize="15sp"
                android:fontFamily="@font/inter_semibold"
                android:id="@+id/premiumTitle"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_members_can_nview_all_their_likes_at_once"
                app:layout_constraintLeft_toLeftOf="@id/intestedTitle"
                app:layout_constraintTop_toBottomOf="@id/intestedTitle" />
            <com.google.android.material.button.MaterialButton
                app:cornerRadius="20dp"
                android:text="@string/upgrade"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/inter_bold"
                android:textAllCaps="false"
                android:id="@+id/upgradeBtn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/premiumTitle"
                app:layout_constraintTop_toTopOf="@id/premiumTitle"
                app:layout_constraintBottom_toBottomOf="@id/premiumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/likeRev"
                android:layout_margin="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/viewholder_profile_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/premiumTitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>